# MuSAE-Inv-Invariant-Causal-Feature-Selection-from-Sparse

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: ablation_layers.yaml  ablation_reg.yaml  ablation_topk.yaml  default.yaml
docker/: Dockerfile  README.md
docs/: ARCHITECTURE.md  DATASETS.md  INSTALLATION.md  METHODOLOGY.md  USAGE.md
docs/assets/: .gitkeep
musae_inv/: __init__.py  config.py
musae_inv/analysis/: __init__.py  mechanistic.py  statistical.py
musae_inv/data/: __init__.py  datasets.py  preprocessing.py
musae_inv/evaluation/: __init__.py  baselines.py  logit_lens.py  metrics.py
musae_inv/features/: __init__.py  counterfactual.py  extraction.py  icfs.py
musae_inv/models/: __init__.py  model_loader.py  probes.py  saplma.py
musae_inv/utils/: __init__.py  io.py  seed.py
musae_inv/visualization/: __init__.py  plots.py  tables.py
notebooks/: .gitkeep
paper/: .gitkeep
scripts/: download_data.py  evaluate.py  extract_features.py  generate_figures.py  generate_tables.py  run_baselines.py  train.py
tests/: __init__.py  conftest.py  test_config.py  test_icfs.py  test_metrics.py  test_preprocessing.py  test_utils.py
